# GemParticles

./: .gitignore  CMakeLists.txt  ParticleSystem.sln  ParticleSystem.vcxproj  ParticleSystem.vcxproj.filters  README.MD  cmakelists.txt  conanfile.txt  imgui.ini
GemParticlesGUI/: CMakeLists.txt  README.MD
ParticleSystemTest/: ParticleSystemTest.vcxproj  ParticleSystemTest.vcxproj.filters  googletest_debug.props  googletest_debug_x64.props  googletest_release.props  googletest_release_x64.props  main.cc
ParticleSystemTest/src/: main.cc  rain_emitter_test.cc  rain_emitter_test.hh
cmake/modules/: FindANTTWEAKBAR.cmake  FindAntTweakBar.cmake  FindFreeImage.cmake  FindGLEW.cmake  FindGLFW.cmake  FindGLM.cmake
gifs_and_screenshots/: gimp_gif_size_reduction.py
shaders/: debug_axes.vert  default.comp  default.frag  default.geom  default.tesc  default.tese  default.vert  particle_billboard.geom  particle_billboard.vert  simple_texture.frag  test.frag  test.vert
src/: CMakeLists.txt  app.cc  app.hh  avx_particle_attractor.cc  avx_particle_attractor.hh  basic_stream_emitter.cc  basic_stream_emitter.hh  basic_stream_source.cc  basic_stream_source.hh  camera.cc  camera.hh  core_opengl_renderer.cc  core_opengl_renderer.hh  cpu_particle_module.cc  cpu_particle_module.hh  default_dynamic.cc  default_dynamic.hh  dynamic.hh  emitter.cc  emitter.hh  euler_model.cc  euler_model.hh  euler_particle_updater.cc  euler_particle_updater.hh  event_handler.cc  event_handler.hh  fountain.cc  fountain.hh  fountain_source.cc  fountain_source.hh  global_acceleration.cc  global_acceleration.hh  graphic_context.cc  graphic_context.hh  gravity_acceleration.cc  gravity_acceleration.hh  idynamic.hh  isource.cc  isource.hh  macro_definitions.hh  (+64 more)
src/core/: cmakelists.txt  particle_module.cc  particle_module.hh  particle_pool_core.hh  particle_system.hh  particle_system_interface.hh
src/dynamics/: avx_particle_attractor.cc  avx_particle_attractor.hh  cmakelists.txt  dynamic.hh  euler_particle_updater.cc  euler_particle_updater.hh  gravity_acceleration.cc  gravity_acceleration.hh  particle_attractor.cc  particle_attractor.hh  proximity_color_updater.cc  proximity_color_updater.hh
src/emitters/: basic_stream_emitter.cc  basic_stream_emitter.hh  cmakelists.txt  emitter.hh  random_fountain_emitter.cc  random_fountain_emitter.hh  spherical_stream_emitter.cc  spherical_stream_emitter.hh
src/graphic_contexts/: cmakelists.txt  graphic_context.cc  graphic_context.hh  opengl_context.cc  opengl_context.hh
src/main/: app.cc  app.hh  cmakelists.txt  main.cc
src/particle_systems/: cmakelists.txt  particle_system.cc  particle_system.hh
src/projects/: cmakelists.txt  project_dictionary.cc  project_dictionary.hh
src/projects/attractors/: attractor_event_handler.cc  attractor_event_handler.hh  attractor_particle_system.hh  attractor_project.cc  attractor_project.hh  attractor_system_blueprint.cc  attractor_system_blueprint.hh  avx_particle_attractor.cc  avx_particle_attractor.hh  cmakelists.txt  proximity_color_updater.cc  proximity_color_updater.hh
src/projects/glass/: glass_event_handler.cc  glass_event_handler.hh  glass_project.cc  glass_project.hh  glass_scene.cc  glass_scene.hh
src/projects/gpu_particles/: cmakelists.txt  gpu_particles_blueprint.cc  gpu_particles_blueprint.hh  gpu_particles_data.hh  gpu_particles_pool.hh  gpu_particles_project.cc  gpu_particles_project.hh  gpu_particles_scene.cc  gpu_particles_scene.hh  gpu_particles_system.hh
src/projects/gpu_particles/shaders/: default_fds.vert  particle_billboard.geom  particle_billboard.vert  particles.frag
src/projects/light/: cmakelists.txt  light_event_handler.cc  light_event_handler.hh  light_project.cc  light_project.hh  scene_with_light.cc  scene_with_light.hh
src/projects/light/shaders/: default.frag  scene.vert
src/projects/lit_particles/: cmakelists.txt  ground_collision.cc  ground_collision.hh  lit_particles_blueprint.cc  lit_particles_blueprint.hh  lit_particles_data.hh  lit_particles_emitter.cc  lit_particles_emitter.hh  lit_particles_event_handler.cc  lit_particles_event_handler.hh  lit_particles_gravity_acceleration.cc  lit_particles_gravity_acceleration.hh  lit_particles_pool.hh  lit_particles_project.cc  lit_particles_project.hh  lit_particles_renderer.cc  lit_particles_renderer.hh  lit_particles_scene.cc  lit_particles_scene.hh  lit_particles_system.hh  lit_particles_updater.cc  lit_particles_updater.hh
src/projects/lit_particles/shaders/: particle_billboard.geom  particle_billboard.vert
src/projects/rain/: cmakelists.txt  gravity_acceleration.cc  gravity_acceleration.hh  rain_emitter.cc  rain_emitter.hh  rain_event_handler.cc  rain_event_handler.hh  rain_particles_blueprint.cc  rain_particles_blueprint.hh  rain_project.cc  rain_project.hh  rain_texture_renderer.cc  rain_texture_renderer.hh
src/projects/rain/shaders/: debug_axes.vert  default.frag  particle_billboard.vert  simple_texture.frag
src/projects/skybox/: cmakelists.txt  skybox_event_handler.cc  skybox_event_handler.hh  skybox_project.cc  skybox_project.hh  skybox_scene.cc  skybox_scene.hh
src/projects/skybox/shaders/: particle_billboard.vert  skybox.frag  skybox.vert
src/renderers/: cmakelists.txt  core_opengl_renderer.cc  core_opengl_renderer.hh  renderer.hh  texture_core_gl_renderer.cc  texture_core_gl_renderer.hh
src/utils/: basic_event_handler.cc  basic_event_handler.hh  camera.cc  camera.hh  cmakelists.txt  light_module.cc  light_module.hh  macro_definitions.hh  scene.cc  shader_factory.cc  shader_factory.hh  shader_module.cc  shader_module.hh  skybox.cc  skybox.hh  texture_factory.cc  texture_factory.hh  texture_module.cc  timer.hh
src/utils/graphic_contexts/: graphic_context.cc  graphic_context.hh  opengl_context.cc  opengl_context.hh
src/utils/imgui/: imgui_glfw.cpp  imgui_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_log.h  imgui_property_editor.h
textures/ParticleCollection1/Free Collection 1/Static/Bubbles/: Bubbles.eff
